Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-app
  labels:
    app: netflix-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-app
  template:
    metadata:
      labels:
        app: netflix-app
    spec:
      containers:
        - name: netflix-app
          image: 308564447263.dkr.ecr.ap-south-1.amazonaws.com/netflix-clone:master-1938685ea597972b44134f4515f58475b3405719
          ports:
            - containerPort: 80
