Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx 
  rules:
    - host: netflixclone-demo.sudomakecloud.live      # Replace with your domain or use a dummy domain for testing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-app-service # Name of your service
                port:
                  number: 80              # The port exposed by your service
